compute/trino/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trino
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: trino
    release: trino
    component: coordinator
